--- a/package.json
+++ b/package.json
@@ -9,17 +9,16 @@
     "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-player": "^2.3.1",
     "react-scripts": "3.4.1"
   },
   "homepage": "https://mailpoem.com",
-
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build"
-
   },
   "eslintConfig": {
     "extends": "react-app"
