--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-player": "^2.3.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "video-react": "^0.14.1"
   },
   "homepage": "https://mailpoem.com",
   "scripts": {
